# Dog-Breed-Dashboard-App

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
pages/: Data.py  Statistics.py
