[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Moriya Cohen",email = "moriya134@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "streamlit (>=1.53.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
