[project]
name = "ds22-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Moriya Cohen",email = "moriyaco31@gmail.com"}
]
readme = "README.md"
package-mode = false


requires-python = ">=3.12,<3.13"
dependencies = [
    "streamlit (>=1.53.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pandas (>=2.0,<3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
